2015-03-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/xwindow.c (MagickXMakeImage): Silence Coverity 44727
	"Dereference after null check".

	* Magick++/lib/Image.cpp (colorMapSize): Silence Coverity 44728
	"Dereference after null check".

	* coders/vid.c (ReadVIDImage): Silence Coverity 44730 "Explicit
	null dereferenced".

	* coders/mpc.c (ReadMPCImage): Silence Coverity 44732 "Dereference
	after null check".

	* Magick++/lib/Image.cpp (signature): Silence Coverity 44735
	"Dereference null return value".

	* coders/ps.c (ReadPSImage): Ghostscript options concatenation
	should be more secure against buffer overflow.

	* coders/pdf.c (ReadPDFImage): Applied patch by Chris Gilling such
	that '-define pdf:stop-on-error=true' will stop PDF processing
	immediately upon an error.
	(ReadPDFImage): Ghostscript options concatenation should be more
	secure against buffer overflow.

2015-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c (MagickXAnimateImages): Silence Coverity 44736
	"Dereference null return value".  Also fixed apparent memory leak
	that Coverity did not notice.

	* coders/fits.c (ReadFITSImage): Silence Coverity 10209
	"Dereference before null check".

	* magick/color_lookup.c (ReadColorConfigureFile): Silence Coverity
	44743 "Dereference before null check".

	* magick/xwindow.c (MagickXMakeImage): Silence Coverity 44745
	"Dereference before null check".

	* coders/pict.c (ReadPICTImage): Hopefully address consequences of
	Coverity 10292 "Untrusted loop bound" although it will likely
	still complain.

	* magick/utility.c (LocaleCompare, LocaleNCompare): Try to create
	an implementation that Coverity won't label an "tainted sink", and
	therefore result in a Coverity "Use of untrusted scalar value"
	report whenever a string from an external source is compared.  The
	original implementations are not believed to be faulty.

2015-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
