@@ -290,7 +290,7 @@ static unsigned int WriteUILImage(const ImageInfo *image_info,Image *image)
       FormatString(buffer,"    background color = '%.1024s'",symbol);
     else
       FormatString(buffer,"    color('%.1024s',%.1024s) = '%.1024s'",name,
-        PixelIntensityToQuantum(p) < (((double) MaxRGB+1.0)/2.0) ?
+        PixelIntensityToQuantum(image->colormap+i) < (((double) MaxRGB+1.0)/2.0) ?
         "background" : "foreground",symbol);
     (void) WriteBlobString(image,buffer);
     FormatString(buffer,"%.1024s",(i == (long) (colors-1) ? ");\n" : ",\n"));
